              list of isomorphisms.
            - Renamed swapContents() to swap(); the old name is now a
              deprecated alias.  Also added a global
              regina::swap(Triangulation<dim>&, Triangulation<dim>&).
            - Routine isoSig() now supports different encodings (but not
              different decodings), via a new template parameter.
            - Functions isIsomorphicTo() and isContainedIn() now return a
              std::optional<Isomorphism>, not a std::unique_ptr<Isomorphism>.
              The C++ syntax should be largely unaffected, and the Python
              behaviour (returns None if there is no isomorphism) is the same.
            - Simplified the class hierarchy; BoundaryComponentCalculator,
              EulerCalculator, FaceCalculator, FaceList and PachnerHelper are
              now gone, and there are a lot fewer regina::alias classes.
            - FaceListSuite is gone, now merged into TriangulationBase.
            - The inner TopologyLock class now takes its argument by reference.
            - Routine countFaces() now supports the case subdim == dim.
            - Add variants of countFaces(), faces() and face() that take
              the face dimension at runtime (this was already available
              in Python, but is now also available in C++).
        Class Triangulation<3>:
            - All of the changes listed for Triangulation<dim> above.
            - New routine generalAngleStructure().
            - Routine connectedSumDecomposition() is replaced with a new routine
              summands() with different behaviour: it does not insert the
              results into the packet tree or assign packet labels, and it
              throws on error.  The old connectedSumDecomposition() has been
              removed completely, since it relied on triangulations living
              in the packet tree.
            - Routine makeZeroEfficient() has been removed completely, since