@@ -39,8 +39,9 @@ namespace regina::detail {
 
 template std::string TriangulationBase<13>::isoSigFrom
     <IsoSigPrintable<13>>(size_t, const Perm<14>&, Isomorphism<13>*) const;
-template std::string TriangulationBase<13>::isoSig
-    <IsoSigPrintable<13>>(Isomorphism<13>**) const;
+template std::string TriangulationBase<13>::isoSig<IsoSigPrintable<13>>() const;
+template std::pair<std::string, Isomorphism<13>>
+    TriangulationBase<13>::isoSigDetail<IsoSigPrintable<13>>() const;
 template Triangulation<13> TriangulationBase<13>::fromIsoSig(
     const std::string&);
 template size_t TriangulationBase<13>::isoSigComponentSize(const std::string&);
