@@ -39,8 +39,9 @@ namespace regina::detail {
 
 template std::string TriangulationBase<9>::isoSigFrom
     <IsoSigPrintable<9>>(size_t, const Perm<10>&, Isomorphism<9>*) const;
-template std::string TriangulationBase<9>::isoSig
-    <IsoSigPrintable<9>>(Isomorphism<9>**) const;
+template std::string TriangulationBase<9>::isoSig<IsoSigPrintable<9>>() const;
+template std::pair<std::string, Isomorphism<9>>
+    TriangulationBase<9>::isoSigDetail<IsoSigPrintable<9>>() const;
 template Triangulation<9> TriangulationBase<9>::fromIsoSig(const std::string&);
 template size_t TriangulationBase<9>::isoSigComponentSize(const std::string&);
 
